--- a/index.pug
+++ b/index.pug
@@ -6,7 +6,7 @@ html
     title= outline.meta.title
 
     link(rel="stylesheet" href="/css/reveal.css")
-    link(rel="stylesheet" href="/css/theme/black.css")
+    link(rel="stylesheet" href="theme/css/theme/drupalcon2017_baltimore.css")
 
     <!-- Theme used for syntax highlighting of code -->
     link(rel="stylesheet" href="/lib/css/zenburn.css")
