added the new clarity theme to the theme.

--- a/index.pug
+++ b/index.pug
@@ -6,7 +6,7 @@ html
     title= outline.meta.title
 
     link(rel="stylesheet" href="/css/reveal.css")
-    link(rel="stylesheet" href="theme/css/theme/drupalcon2017_baltimore.css")
+    link(rel="stylesheet" href="theme/css/theme/clarity.css")
 
     <!-- Theme used for syntax highlighting of code -->
     link(rel="stylesheet" href="/lib/css/zenburn.css")
@@ -28,7 +28,7 @@ html
       div.branding
         div
           img(src="/content/images/cilogo.png")
-          img(src="/content/images/dclogo.png")
+          a.brand-link(href="https://www.clarity-innovations.com") clarity-innovations.com
 
     script(src="/bower_components/reveal-js/lib/js/head.min.js")
     script(src="/bower_components/reveal-js/js/reveal.js")
