--- a/index.pug
+++ b/index.pug
@@ -23,7 +23,7 @@ html
     div.reveal
       div.slides
         each item in outline.slides
-          section!= item.body
+          section(class=item.classes)!= item.body
 
       div.branding
         div
